--- a/gcc/config/s390/s390.md
+++ b/gcc/config/s390/s390.md
@@ -5909,9 +5909,9 @@
   "*
 {
   if (get_attr_op_type (insn) == OP_TYPE_RR)
-    return \"bctr\\t%0\";
+    return \"bctr\\t%1,%0\";
   else
-    return \"bct\\t%a0\";
+    return \"bct\\t%1,%a0\";
 }"
   [(set (attr "op_type") 
         (if_then_else (match_operand 0 "register_operand" "")
@@ -5983,9 +5983,9 @@
   "*
 {
   if (get_attr_op_type (insn) == OP_TYPE_RRE)
-    return \"bctgr\\t%0\";
+    return \"bctgr\\t%1,%0\";
   else
-    return \"bctg\\t%a0\";
+    return \"bctg\\t%1,%a0\";
 }"
   [(set (attr "op_type") 
         (if_then_else (match_operand 0 "register_operand" "")
