--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-10-08  Tom Tromey  <tromey@redhat.com>
+
+	* parse.y (variable_declarator_id): Simplify error path for
+	array declarator error.  For PR java/8003.
+
 2002-10-08  Zack Weinberg  <zack@codesourcery.com>
 
 	* gjavah.c, jcf-dump.c, jv-scan.c: Globally replace GCCBUGURL with
