gcc: 	* c-opts.c (c_common_decode_option): Add warn_strict_aliasing to 	-Wall. 	* c-typeck.c (build_c_cast): Use warn_strict_aliasing, tweak 	message. 	* flags.h (warn_strict_aliasing): Declare. 	* toplev.c (warn_strict_aliasing): Define. 	(lang_independent_options): Add it. 	* doc/invoke.texi (-Wstrict-aliasing): Document it. testsuite: 	* gcc.dg/alias-1.c: Tweak expected warning.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57938 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,14 @@
+2002-10-08  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* c-opts.c (c_common_decode_option): Add warn_strict_aliasing to
+	-Wall.
+	* c-typeck.c (build_c_cast): Use warn_strict_aliasing, tweak
+	message.
+	* flags.h (warn_strict_aliasing): Declare.
+	* toplev.c (warn_strict_aliasing): Define.
+	(lang_independent_options): Add it.
+	* doc/invoke.texi (-Wstrict-aliasing): Document it.
+
 2002-10-08  Zack Weinberg  <zack@codesourcery.com>
 
 	* system.h (GCCBUGURL): Delete.
