--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-08  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* gcc.dg/alias-1.c: Tweak expected warning.
+
 2002-10-06  D.Venkatasubramanian <dvenkat@noida.hcltech.com>
 
 	* gcc.dg/20020411-1.c: Disable for 16-bit "int".
