--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2003-04-15  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	PR target/10338
+	PR bootstrap/10198
+	PR bootstrap/10140
+	* fixinc/gnu-regex.c (regerror): Use mempcpy not __mempcpy.
+
 2003-04-15  Jakub Jelinek  <jakub@redhat.com>
 
 	* config/rs6000/rs6000.h (EPILOGUE_USES): Use register 2,
