--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2003-04-15  Jason Merrill  <jason@redhat.com>
+
+	* decl2.c (mark_used): Don't instantiate anything if
+	skip_evaluation.
+
 2003-04-15  Mark Mitchell  <mark@codesourcery.com>
 
 	* init.c (build_new_1): Use nullexp instead of null_node to avoid
