--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2003-04-16  Tom Tromey  <tromey@redhat.com>
+
+	* mauve-libgcj: Disable some tests we can't compile.
+
 2003-04-10  Tom Tromey  <tromey@redhat.com>
 
 	* verify.cc (pop64): Removed.
