--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2003-04-17  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* doc/invoke.texi (inline-limit): Fix pasto.
+
 2003-04-16  Mark Mitchell  <mark@codesourcery.com>
 
 	PR middle-end/8866
