--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-04-17  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* doc/install.texi (Binaries): Update URL and list of platforms
+	provided by ftp.thewrittenword.com.
+
 2003-04-17  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	* doc/invoke.texi (inline-limit): Fix pasto.
