--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-04-17  Janis Johnson  <janis187@us.ibm.com>
+
+	* doc/sourcebuild.texi (Test Suites): Document support for testing
+	binary compatibility (moved from testsuite/README.compat).
+
 2003-04-17  Simon Law  <sfllaw@engmail.uwaterloo.ca>
 
         * doc/include/gpl.texi: Fix double-spacing after "MA" to match
