--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-04-17  Janis Johnson  <janis187@us.ibm.com>
+
+	* README.compat: Remove; content now in doc/sourcebuild.texi.
+
 2003-04-14  Hans-Peter Nilsson  <hp@axis.com>
 
 	PR target/10377
