--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,13 @@
+2003-04-17  Andreas Tobler  <toa@pop.agri.ch>
+            Benjamin Kosnik  <bkoz@redhat.com>
+ 
+        * config/os/generic/ctype_inline.h: Fix.
+ 
+2003-04-17  Andreas Tobler  <toa@pop.agri.ch>
+ 	    
+	* configure.target (_cpu_incdir_fullpath): Solaris 2.9 uses
+	solaris includes, not generic.
+
 2003-04-15  Benjamin Kosnik  <bkoz@redhat.com>
             Paolo Carlini  <pcarlini@unitus.it>
 
