re PR libstdc++/9555 (ostream inserters fail to set badbit on exception)
2003-04-17  Benjamin Kosnik  <bkoz@redhat.com>

	PR libstdc++/9555
	* include/bits/ostream.tcc: Catch all exceptions for formatted
	output, instead of std::exception and derivatives.
	* include/bits/istream.tcc: Same.

From-SVN: r65772

--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,10 @@
+2003-04-17  Benjamin Kosnik  <bkoz@redhat.com>
+
+	PR libstdc++/9555
+	* include/bits/ostream.tcc: Catch all exceptions for formatted
+	output, instead of std::exception and derivatives.
+	* include/bits/istream.tcc: Same.
+
 2003-04-17  Andreas Tobler  <toa@pop.agri.ch>
             Benjamin Kosnik  <bkoz@redhat.com>
  
