--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2003-04-20  Nathan Sidwell  <nathan@codesourcery.com>
+
+	PR c++/10405
+	* search.c (lookup_field_1): Final scan goes backwards for
+	types, forwards for non-types.
+
 2003-04-15  Jason Merrill  <jason@redhat.com>
 
 	* decl2.c (mark_used): Don't instantiate anything if
