--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-04-20  Marek Michalkiewicz  <marekm@amelek.gda.pl>
+
+	* config/avr/avr.md (*cmpqi_sign_extend): Handle negative values
+	of operand 1 correctly.
+
 2003-04-19  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
 
 	* cfgrtl.c (try_redirect_by_replacing_jump): Remove unused variables.
