--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2003-04-20  Mohan Embar  <gnustuff@thisiscool.com>
+
+	* jcf-io.c (find_class): use DIR_SEPARATOR instead of
+	'/' when computing java source filename
+
 2003-04-10  Eric Blake  <ebb9@email.byu.edu>
 
 	PR java/10253:
