re PR c++/9881 (What is an address constant expression?)
cp:
	PR c++/9881
	* typeck.c (build_unary_op): Fold all COMPONENT_REF addr
	expressions. Reverts my 2002-08-08 patch.
testsuite:
	PR c++/9881
	* g++.dg/init/addr-const1.C: New test.
	* g++.dg/other/packed1.C: XFAIL on aligned architectures.

From-SVN: r65881

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2003-04-21  Nathan Sidwell  <nathan@codesourcery.com>
+
+	PR c++/9881
+	* typeck.c (build_unary_op): Fold all COMPONENT_REF addr
+	expressions. Reverts my 2002-08-08 patch.
+
 2003-04-20  Nathan Sidwell  <nathan@codesourcery.com>
 
 	PR c++/10405
