winnt.c (i386_pe_mark_dllimport): Revert previous changes.
	* config/i386/winnt.c (i386_pe_mark_dllimport): Revert previous
	changes.

From-SVN: r65921

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2003-04-21  Mark Mitchell  <mark@codesourcery.com>
 
+	* config/i386/winnt.c (i386_pe_mark_dllimport): Revert previous
+	changes.
+
+2003-04-21  Mark Mitchell  <mark@codesourcery.com>
+
 	* config/i386/winnt.c (i386_pe_mark_dllimport): Make the new RTL
 	have the same form as the old RTL.
 
