--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2003-04-22  Release Manager
+
+	* GCC 3.2.3 Released.
+
 2003-04-15  Jason Merrill  <jason@redhat.com>
 
 	* decl2.c (mark_used): Don't instantiate anything if
