--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-04-22  Release Manager
+
+	* GCC 3.2.3 Released.
+
 2003-04-16  Gabriel Dos Reis  <gdr@integrable-solutions.net>
         Backport from mainline.
 
