--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-04-22  Andreas Tobler <a.tobler@schweiz.ch>
+
+        * g++.dg/other/packed1.C: Fix dg options.
+
 2003-04-21  Mark Mitchell  <mark@codesourcery.com>
 
 	* g++.dg/template/recurse.C: Adjust location of error messages.
