gbl-ctors.h: Add special license exception.
	* gbl-ctors.h: Add special license exception.
	* libgcc2.h: Likewise.
	* tsystem.h: Likewise.

From-SVN: r65947

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2003-04-22  David Turner <novalis@gnu.org>
+
+	* gbl-ctors.h: Add special license exception.
+	* libgcc2.h: Likewise.
+	* tsystem.h: Likewise.
+	
 2003-04-21  Mark Mitchell  <mark@codesourcery.com>
 
 	* Makefile.in (calls.o): Depend on except.h.
