re PR c++/10428 (struct <typedef'ed name> causes ICE in write_unscoped_name)
	PR c++/10428
	* g++.dg/parse/elab1.C: New test.

	PR c++/10428
	* decl.c (check_elaborated_type_specifier): New function, split
	out from ...
	(xref_tag): ... here.  Use the new function in more places.

From-SVN: r65960

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2003-04-22  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/10428
+	* g++.dg/parse/elab1.C: New test.
+
 2003-04-22  Andreas Tobler <a.tobler@schweiz.ch>
 
         * g++.dg/other/packed1.C: Fix dg options.
