--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,10 @@
 2003-04-22  Mark Mitchell  <mark@codesourcery.com>
 
+	PR c++/10446
+	* g++.dg/parse/crash3.C: New test.
+
+2003-04-22  Mark Mitchell  <mark@codesourcery.com>
+
 	PR c++/10428
 	* g++.dg/parse/elab1.C: New test.
 
