--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,13 @@
+2003-04-22  Richard Henderson  <rth@redhat.com>
+
+	PR 8866
+        * rtl.h (MEM_NOTRAP_P): New.
+        (MEM_COPY_ATTRIBUTES): Copy it.
+        * rtlanal.c (may_trap_p): Check it.
+        * expr.c (do_tablejump): Set it.
+
+	* cfgrtl.c (try_redirect_by_replacing_jump): Revert last three changes.
+
 2003-04-22  David Turner <novalis@gnu.org>
 
 	* gbl-ctors.h: Add special license exception.
