cpptrad.c (_cpp_replacement_text_len): Add check for macro parameter count.
        * cpptrad.c (_cpp_replacement_text_len): Add check for macro parameter count.
        (_cpp_copy_replacement_text): Same.


        * gcc.dg/cpp/trad/funlike-5.c: New test.

From-SVN: r65978

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-04-22  Devang Patel  <dpatel@apple.com>
+
+	* cpptrad.c (_cpp_replacement_text_len): Add check for macro parameter count.
+	(_cpp_copy_replacement_text): Same.
+	
 2003-04-22  Richard Henderson  <rth@redhat.com>
 
 	PR 8866
