--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-04-22  Devang Patel  <dpatel@apple.com>
+
+	* gcc.dg/cpp/trad/funlike-5.c: New test.
+	
 2003-04-22  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/10446
