--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-04-23  Andreas Tobler <a.tobler@schweiz.ch>
+
+        * g++.dg/other/packed1.C: Append the missing brace.
+
 2003-04-22  Devang Patel  <dpatel@apple.com>
 
 	* gcc.dg/cpp/trad/funlike-5.c: New test.
