--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,8 @@
+2003-04-23  Benjamin Kosnik  <bkoz@belmont.constant.com>
+ 
+        * config/locale/generic/c_locale.h (__convert_from_v): Use
+        attribute unused.
+ 
 2003-04-23  Phil Edwards  <pme@gcc.gnu.org>
 
 	* include/bits/istream.tcc (putback, unget, sync, tellg, seekg):
