--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2003-04-23  Richard Henderson  <rth@redhat.com>
+
+	* toplev.c (rest_of_compilation): Delay no_new_pseudos until
+	after initialize_uninitialized_subregs; update reg info assuming
+	new pseudos were created.
+
 2003-04-23  Olivier Hainque  <hainque@act-europe.fr>
 
 	* config/pa/pa.md (extv, extzv): FAIL if the bitfield length is zero.
