re PR c++/10471 (SegFault in build_cxx_call)
	PR c++/10471
	* call.c (build_cxx_call): Robustify.

	PR c++/10471
	* g++.dg/template/defarg2.C: New test.

From-SVN: r66034

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,10 @@
 2003-04-23  Mark Mitchell  <mark@codesourcery.com>
 
+	PR c++/10471
+	* call.c (build_cxx_call): Robustify.
+
+2003-04-23  Mark Mitchell  <mark@codesourcery.com>
+
 	PR c++/10451
 	* decl.c (grokdeclarator): Correct logic for "mutable" errors.
 
