--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2003-04-23  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/10471
+	* g++.dg/template/defarg2.C: New test.
+
 2003-04-23  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
 
 	* g++.dg/other/packed1.C: XFAIL hppa*-*-*.
