--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,7 @@
+2003-04-24  Richard Sandiford  <rsandifo@redhat.com>
+
+	* src/localename.cc (__gnu_cxx::facet_vec): Correct types.
+
 2003-04-24  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* config/locale/generic/c_locale.h: Fix placement for old parser.
