--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2003-04-26  Richard Henderson  <rth@redhat.com>
+
+        * config/ia64/ia64.c (ia64_compute_frame_size): Allow inline asm
+        to clobber ar.pfs and ar.unat.
+        (ia64_expand_prologue): Force alloc instruction if ar.pfs saved;
+        fix test for spilling ar.pfs to the stack.
+
 2003-04-26  Stephane Carrez  <stcarrez@nerim.fr>
 
 	* doc/install.texi (Binaries): Mention binaries for HC11/HC12.
