--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,7 @@
 2003-04-27  Mark Mitchell  <mark@codesourcery.com>
 
+	* decl.c (maybe_commonize_var): Fix thinko in last patch.
+
 	PR c++/10506
 	* method.c (use_thunk): Decrement immediate_size_expand.
 
