--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,19 @@
+2003-04-28  Benjamin Kosnik  <bkoz@redhat.com>
+
+	PR libstdc++/10132
+	* include/std/std_fstream.h (basic_filebuf::is_open): Add throw()
+	exception specifications.
+	(basic_filebuf::close): Same.
+	(basic_filebuf::_M_destroy_internal_buffer): Same.
+	(basic_filebuf): Remove __res_type typedef.	
+	* include/std/std_streambuf.h: 
+	(basic_streambuf::_M_pback_destroy): Same.
+	* src/fstream.cc: Same.
+	* include/bits/fstream.tcc
+	(basic_filebuf::_M_convert_to_external): Simplify.
+	(basic_filebuf::seekoff): Use has_facet	before use_facet.
+	(basic_filebuf::close): Add exception specification of throw().
+
 2003-04-25  Ranjit Mathew  <rmathew@hotmail.com>
             Phil Edwards  <pme@gcc.gnu.org>
 	
