win32.h: added dummy ECONNREFUSED define and _Jv_select() declaration
2003-04-15  Mohan Embar  <gnustuff@thisiscool.com>

        * include/win32.h: added dummy ECONNREFUSED define and
        _Jv_select() declaration
        * win32.cc (_Jv_select): placeholder implementation
        (_Jv_platform_initProperties): Fix by Ranjit
        Mathew (rmathew@hotmail.com): use generic names
        like "x86" for the "os.arch" property to be consistent with
        what Sun's JDK produces. Use the wProcessorArchitecture
        member of the Win32 SYSTEM_INFO structure, filled in a call
        to GetSystemInfo( ), instead of dwProcessorType
        * gnu/java/nio/natSocketChannelImpl.cc (SocketRead): use
        elements(data) and explicitly cast to char* on platforms
        where jbyte is not signed char
        (SocketWrite): idem

From-SVN: r66226

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,19 @@
+2003-04-15  Mohan Embar  <gnustuff@thisiscool.com>
+
+	* include/win32.h: added dummy ECONNREFUSED define and
+	_Jv_select() declaration
+	* win32.cc (_Jv_select): placeholder implementation
+	(_Jv_platform_initProperties): Fix by Ranjit
+	Mathew (rmathew@hotmail.com): use generic names
+	like "x86" for the "os.arch" property to be consistent with
+	what Sun's JDK produces. Use the wProcessorArchitecture
+	member of the Win32 SYSTEM_INFO structure, filled in a call 
+	to GetSystemInfo( ), instead of dwProcessorType
+	* gnu/java/nio/natSocketChannelImpl.cc (SocketRead): use
+	elements(data) and explicitly cast to char* on platforms
+	where jbyte is not signed char
+	(SocketWrite): idem
+
 2003-03-29  Mohan Embar  <gnustuff@thisiscool.com>
 
 	* include/jvm.h: (_Jv_GetNbArgs) added
