c-pragma.c (maybe_apply_renaming_pragma): Fix typo.
	* c-pragma.c (maybe_apply_renaming_pragma): Fix typo.
	* gcc.c (display_help): Likewise.
	* toplev.c (f_options): Likewise.
	* params.def (PARAM_MAX_INLINE_SCOPE): Likewise.
	* config/c4x/c4x.h (TARGET_SWITCHES): Likewise.
	* config/mcore/mcore.h (TARGET_SWITCHES): Likewise.
	* config/s390/s390.h (TARGET_SWITCHES): Likewise.
	* config/v850/v850.h (TARGET_SWITCHES): Likewise.

	* lang-options.h: Likewise.

From-SVN: r66229

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2003-04-29  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
+
+	* lang-options.h: Likewise.
+
 2003-04-29  Mark Mitchell  <mark@codesourcery.com>
 
 	* decl.c (maybe_commonize_var): Further tweak support for systems
