--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2003-04-29  Zack Weinberg  <zack@codesourcery.com>
+
+	* config.gcc: Install obsolete target list for GCC 3.3.
+	* doc/install.texi: Mention in specific-target instructions
+	that certain configurations are deprecated.
+
 2003-04-29  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
 
 	* c-pragma.c (maybe_apply_renaming_pragma): Fix typo.
@@ -11,10 +17,10 @@
 
 2003-04-29  Danny Smith  <dannysmith@users.sourceforge.net>
 
-        * config/i386/mingw32.h (LIBGCC_SPEC): Add libmingwex.a.
-        Update copyright.
-        * config/i386/cygwin.h (LIBGCC_SPEC): Add libmingwex.a, for
-        -mno-cygwin case.
+	* config/i386/mingw32.h (LIBGCC_SPEC): Add libmingwex.a.
+	Update copyright.
+	* config/i386/cygwin.h (LIBGCC_SPEC): Add libmingwex.a, for
+	-mno-cygwin case.
 
 2003-04-29  J"orn Rennecke <joern.rennecke@superh.com>
 
@@ -65,10 +71,10 @@ Mon Apr 28 09:54:56 CEST 2003  Jan Hubicka  <jh@suse.cz>
 
 2003-04-26  Richard Henderson  <rth@redhat.com>
 
-        * config/ia64/ia64.c (ia64_compute_frame_size): Allow inline asm
-        to clobber ar.pfs and ar.unat.
-        (ia64_expand_prologue): Force alloc instruction if ar.pfs saved;
-        fix test for spilling ar.pfs to the stack.
+	* config/ia64/ia64.c (ia64_compute_frame_size): Allow inline asm
+	to clobber ar.pfs and ar.unat.
+	(ia64_expand_prologue): Force alloc instruction if ar.pfs saved;
+	fix test for spilling ar.pfs to the stack.
 
 2003-04-26  Stephane Carrez  <stcarrez@nerim.fr>
 
@@ -121,30 +127,30 @@ Sun Apr 20 18:23:18 CEST 2003  Richard Henderson  <rth@redhat.com>
 	(builtin_setjmp_receiver): Delay call to ia64_reload_gp
 	until after reload.
 
-        * emit-rtl.c (try_split): Handle 1-1 splits of call insns properly.
+	* emit-rtl.c (try_split): Handle 1-1 splits of call insns properly.
 
-        * config/ia64/ia64.c (TARGET_FUNCTION_OK_FOR_SIBCALL): New.
-        (ia64_gp_save_reg): Remove.
-        (struct ia64_frame_info): Move to the beginning of the file;
-        add reg_save_gp.
-        (ia64_expand_call): Rearrange for new call patterns.
-        (ia64_reload_gp): New.
-        (ia64_split_call): New.
-        (ia64_compute_frame_size): Allocate reg_save_gp.
-        (ia64_expand_prologue): Save reg_save_gp.
-        (ia64_expand_epilogue): Don't restore gp.
-        (ia64_hard_regno_rename_ok): Remove R4 hack.
-        (ia64_function_ok_for_sibcall): New.
-        (ia64_output_mi_thunk): Set reload_completed, no_new_pseudos;
-        call try_split on sibcall pattern.
-        * config/ia64/ia64-protos.h: Update.
-        * config/ia64/ia64.md (call_nogp, call_value_nogp, sibcall_nogp):
-        Rename from nopic versions.  Confiscate 2nd argument to call as
-        a marker.
-        (call_pic, call_value_pic, sibcall_pic): Remove.
-        (call_gp, call_value_gp, sibcall_gp): New.
-        (builtin_setjmp_setup): Remove.
-        (builtin_setjmp_receiver): Call ia64_reload_gp.
+	* config/ia64/ia64.c (TARGET_FUNCTION_OK_FOR_SIBCALL): New.
+	(ia64_gp_save_reg): Remove.
+	(struct ia64_frame_info): Move to the beginning of the file;
+	add reg_save_gp.
+	(ia64_expand_call): Rearrange for new call patterns.
+	(ia64_reload_gp): New.
+	(ia64_split_call): New.
+	(ia64_compute_frame_size): Allocate reg_save_gp.
+	(ia64_expand_prologue): Save reg_save_gp.
+	(ia64_expand_epilogue): Don't restore gp.
+	(ia64_hard_regno_rename_ok): Remove R4 hack.
+	(ia64_function_ok_for_sibcall): New.
+	(ia64_output_mi_thunk): Set reload_completed, no_new_pseudos;
+	call try_split on sibcall pattern.
+	* config/ia64/ia64-protos.h: Update.
+	* config/ia64/ia64.md (call_nogp, call_value_nogp, sibcall_nogp):
+	Rename from nopic versions.  Confiscate 2nd argument to call as
+	a marker.
+	(call_pic, call_value_pic, sibcall_pic): Remove.
+	(call_gp, call_value_gp, sibcall_gp): New.
+	(builtin_setjmp_setup): Remove.
+	(builtin_setjmp_receiver): Call ia64_reload_gp.
 
 2003-04-24  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
 
@@ -158,7 +164,7 @@ Sun Apr 20 18:23:18 CEST 2003  Richard Henderson  <rth@redhat.com>
 
 	bootstrap/10453
 	* config/sparc/sparc.md (umulsidi3, mulsidi3): Avoid using
-	const_umulsidi3_sp32 and const_mulsidi3_sp32 on 64bit targets 
+	const_umulsidi3_sp32 and const_mulsidi3_sp32 on 64bit targets
 	where they might be not present. Use their _sp64 equivalent
 	instead.
 
@@ -174,11 +180,11 @@ Sun Apr 20 18:23:18 CEST 2003  Richard Henderson  <rth@redhat.com>
 	* config/pa/pa.md (extv, extzv): FAIL if the bitfield length is zero.
 
 2003-04-23  James A Morrison  <ja2morri@uwaterloo.ca>
-        
+
 	* invoke.texi: Eliminate extra white-space caused by @gccoptlist{
 	on its own line.
 	Ensure there are two spaces between each pair of options and add
-        @gol where appropriate.
+	@gol where appropriate.
 
 2003-04-23  Ulrich Weigand  <uweigand@de.ibm.com>
 
@@ -188,14 +194,14 @@ Sun Apr 20 18:23:18 CEST 2003  Richard Henderson  <rth@redhat.com>
 
 	* cpptrad.c (_cpp_replacement_text_len): Add check for macro parameter count.
 	(_cpp_copy_replacement_text): Same.
-	
+
 2003-04-22  Richard Henderson  <rth@redhat.com>
 
 	PR 8866
-        * rtl.h (MEM_NOTRAP_P): New.
-        (MEM_COPY_ATTRIBUTES): Copy it.
-        * rtlanal.c (may_trap_p): Check it.
-        * expr.c (do_tablejump): Set it.
+	* rtl.h (MEM_NOTRAP_P): New.
+	(MEM_COPY_ATTRIBUTES): Copy it.
+	* rtlanal.c (may_trap_p): Check it.
+	* expr.c (do_tablejump): Set it.
 
 	* cfgrtl.c (try_redirect_by_replacing_jump): Revert last three changes.
 
@@ -277,8 +283,8 @@ Sun Apr 20 18:23:18 CEST 2003  Richard Henderson  <rth@redhat.com>
 
 2003-04-17  Simon Law  <sfllaw@engmail.uwaterloo.ca>
 
-        * doc/include/gpl.texi: Fix double-spacing after "MA" to match
-        the one provided by the FSF.
+	* doc/include/gpl.texi: Fix double-spacing after "MA" to match
+	the one provided by the FSF.
 
 2003-04-17  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
@@ -300,7 +306,7 @@ Sun Apr 20 18:23:18 CEST 2003  Richard Henderson  <rth@redhat.com>
 	PR/10271
 	* pa-protos.h (function_arg): Remove last argument.
 	* pa.c (function_arg): Likewise.  Use CUMULATIVE_ARGS struct instead.
-	* pa.h (struct hppa_args): Add member incoming. 
+	* pa.h (struct hppa_args): Add member incoming.
 	(INIT_CUMULATIVE_ARGS, INIT_CUMULATIVE_INCOMING_ARGS): Initialize
 	member incoming.
 	(FUNCTION_ARG): Revise call to function_arg.
@@ -355,7 +361,7 @@ Sun Apr 20 18:23:18 CEST 2003  Richard Henderson  <rth@redhat.com>
 2003-04-15  Jason Merrill  <jason@redhat.com>
 
 	PR middle-end/10336, c++/10401
-	* jump.c (never_reached_warning): Also stop looking if we reach the 
+	* jump.c (never_reached_warning): Also stop looking if we reach the
 	beginning of the function.
 
 2003-04-15  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
@@ -396,7 +402,7 @@ Mon Apr 14 16:14:37 CEST 2003  Jan Hubicka  <jh@suse.cz>
 
 2003-04-12  Stephane Carrez  <stcarrez@nerim.fr>
 
-	* config/m68hc11/m68hc11-protos.h 
+	* config/m68hc11/m68hc11-protos.h
 	(m68hc11_eq_compare_operator): Declare
 	* config/m68hc11/m68hc11.h (PREDICATE_CODES): Register new predicate.
 	* config/m68hc11/m68hc11.c (m68hc11_eq_compare_operator): New predicate
@@ -461,9 +467,9 @@ Mon Apr 14 16:14:37 CEST 2003  Jan Hubicka  <jh@suse.cz>
 
 2003-04-11  Richard Henderson  <rth@redhat.com>
 
-        PR c++/10202
-        * expr.c (expand_expr): Use COMPLETE_OR_UNBOUND_ARRAY_TYPE_P
-        not COMPLETE_TYPE_P for re-invoking layout_decl.
+	PR c++/10202
+	* expr.c (expand_expr): Use COMPLETE_OR_UNBOUND_ARRAY_TYPE_P
+	not COMPLETE_TYPE_P for re-invoking layout_decl.
 
 2003-04-11  Simon Law  <sfllaw@engmail.uwaterloo.ca>
 
@@ -477,9 +483,9 @@ Mon Apr 14 16:14:37 CEST 2003  Jan Hubicka  <jh@suse.cz>
 
 2003-04-11  Richard Henderson  <rth@redhat.com>
 
-        PR c/10201
-        * expr.c (expand_expr): Move DECL_RTL frobbing ...
-        * stor-layout.c (layout_decl): ... here.
+	PR c/10201
+	* expr.c (expand_expr): Move DECL_RTL frobbing ...
+	* stor-layout.c (layout_decl): ... here.
 
 2003-04-11  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
 
@@ -498,11 +504,11 @@ Mon Apr 14 16:14:37 CEST 2003  Jan Hubicka  <jh@suse.cz>
 	is not specified.
 
 2003-04-08  Jonathan Wakely  <redi@gcc.gnu.org>
- 
+
  	* doc/extend.texi (Template Instantiation): Refer to ISO standard,
  	not Working Paper.
  	* doc/invoke.texi (C++ Dialect Options): Same.
- 
+
 Fri Apr 11 00:12:14 CEST 2003  Jan Hubicka  <jh@suse.cz>
 
 	PR inline-asm/8803
@@ -565,15 +571,15 @@ Fri Apr 11 00:12:14 CEST 2003  Jan Hubicka  <jh@suse.cz>
 
 2003-04-07  Glen Nakamura  <glen@imodulo.com>
 
-        PR opt/8634
-        * explow.c (maybe_set_unchanging): Don't flag non-static const
-        aggregate type initializers with RTX_UNCHANGING_P.
+	PR opt/8634
+	* explow.c (maybe_set_unchanging): Don't flag non-static const
+	aggregate type initializers with RTX_UNCHANGING_P.
 
 2003-04-07  Richard Henderson  <rth@redhat.com>
 
 	PR opt/8634
-        * function.c (purge_addressof_1): Don't try arithmetics for
-        unchanging memories.
+	* function.c (purge_addressof_1): Don't try arithmetics for
+	unchanging memories.
 
 2003-04-07  Janis Johnson  <janis187@us.ibm.com>
 
