--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,11 @@
 2003-04-29  Mark Mitchell  <mark@codesourcery.com>
 
+	PR c++/10515
+	* g++.dg/ext/desig1.C: New test.
+	* g++.dg/ext/init1.C: Likewise.
+
+2003-04-29  Mark Mitchell  <mark@codesourcery.com>
+
 	* g++.old-deja/g++.pt/deduct5.C: Remove unnecessary initializer.
 
 2003-04-28  Mark Mitchell  <mark@codesourcery.com>
