--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,8 @@
 2003-04-29  Mark Mitchell  <mark@codesourcery.com>
 
+	PR c++/10527
+	* g++.dg/init/new7.C: New test.
+
 	PR c++/10515
 	* g++.dg/ext/desig1.C: New test.
 	* g++.dg/ext/init1.C: Likewise.
