--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,8 @@
 2003-04-29  Mark Mitchell  <mark@codesourcery.com>
 
+	PR c++/10551
+	* g++.dg/template/explicit1.C: New test.
+
 	PR c++/10549
 	* g++.dg/other/bitfield1.C: New test.
 
