--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,17 @@
+2003-04-29  Phil Edwards  <pme@gcc.gnu.org>
+
+	Bulk documentation merge (copy) from trunk.
+	* docs/doxygen/Intro.3, docs/doxygen/TODO, docs/doxygen/mainpage.html, 
+	docs/doxygen/run_doxygen, docs/doxygen/user.cfg.in, 
+	docs/html/configopts.html, docs/html/debug.html, 
+	docs/html/documentation.html, docs/html/explanations.html, 
+	docs/html/install.html, docs/html/17_intro/howto.html, 
+	docs/html/17_intro/porting.html, docs/html/18_support/howto.html, 
+	docs/html/19_diagnostics/howto.html, docs/html/27_io/howto.html, 
+	docs/html/ext/howto.html, docs/html/ext/sgiexts.html, 
+	docs/html/faq/index.html, docs/html/faq/index.txt:
+	Merge from trunk.
+
 2003-04-28  Nathan Myers  <ncm@cantrip.org>
 
 	Move some basic_string members out of line because
