--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-04-30  Andreas Schwab  <schwab@suse.de>
+
+	* doc/extend.texi (Other Builtins): Enclose multiple word data
+	type in braces for @deftypefn.
+
 2003-04-29  Jason Merrill  <jason@redhat.com>
 
 	PR middle-end/10336
