--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2003-05-01  Roger Sayle  <roger@eyesopen.com>
+
+        PR fortran/9974
+        * gcse.c (reg_killed_on_edge): New function to test whether the
+        given reg is overwritten by any instruction queued on an edge.
+        (bypass_block): Ignore substitutions killed on incoming edges.
+        Don't bypass outgoing edges that have queued instructions.
+
 2003-04-30  Andreas Schwab  <schwab@suse.de>
 
 	* doc/extend.texi (Other Builtins): Enclose multiple word data
