--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,27 @@
+2003-05-01  Paolo Carlini  <pcarlini@unitus.it>
+            Nathan Myers  <ncm@cantrip.org>
+
+	Backport from mainline fix of 2003-03-28.
+	PR libstdc++/9533
+	* include/bits/fstream.tcc (basic_filebuf<>::open): Don't
+	call underflow().
+	(basic_filebuf<>::showmanyc): Use the information provided
+	by codecvt and __basic_file<>::showmanyc_helper to implement
+	a non-trivial showmanyc.
+	* config/io/basic_file_stdio.h
+	(__basic_file<>::showmanyc_helper): New, declare.
+	* config/io/basic_file_stdio.cc
+	(__basic_file<>::showmanyc_helper): Define.
+	(__basic_file<>::_M_open_mode): Don't set O_NONBLOCK.
+	(__basic_file<char>::open): Don't call fcntl().
+	* acinclude.m4 (GLIBCPP_CHECK_S_ISREG_OR_S_IFREG,
+	GLIBCPP_CHECK_POLL): New macros.
+	* configure.in: Call here.
+	* acconfig.h: Add #undefs for the corresponding symbols.
+	* aclocal.m4: Regenerate.
+	* configure: Regenerate.
+	* config.h.in: Regenerate.
+	
 2003-04-29  Phil Edwards  <pme@gcc.gnu.org>
 
 	Bulk documentation merge (copy) from trunk.
