--- a/libjava/testsuite/ChangeLog
+++ b/libjava/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2003-05-01  Tom Tromey  <tromey@redhat.com>
+
+	PR libgcj/10582:
+	* libjava.lang/assign.java: New file.
+	* libjava.lang/assign.out: New file.
+
 2003-04-16  Tom Tromey  <tromey@redhat.com>
 
 	* libjava.mauve/xfails: Added some more failing tests.
