--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,13 @@
+2003-05-01  Tom Tromey  <tromey@redhat.com>
+
+	PR libgcj/10582:
+	* verify.cc (_Jv_BytecodeVerifier::is_assignable_from_slow):
+	Removed.
+	(type::compatible): Use _Jv_IsAssignableFrom.
+	* java/lang/natClass.cc (iindex_mutex_initialized): Now static.
+	(_Jv_IsAssignableFrom): Work even when source or target class is
+	not prepared.
+
 2003-04-15  Mohan Embar  <gnustuff@thisiscool.com>
 
 	* include/win32.h: added dummy ECONNREFUSED define and
